# tenacity_rover

./: README.md
openmv_cam/: .gitignore  50-openmv.rules  CMakeLists.txt  Dockerfile  README.md  openMV_cam.rviz  package.xml  run-docker.sh
openmv_cam/launch/: openmv_cam.launch
openmv_cam/scripts/: install_openmv.bash  install_ros_dependencies.bash  install_scripts_for_docker.bash
openmv_cam/src/: cam_test.py  usb_vcp.py
openmv_cam/src/calibration/: calibrate.py  calibrate_fisheye.py  get_cal_images.py
openmv_cam/src/openmvcam_node/: openmv_cam_node.py
openmv_flow/: CMakeLists.txt  optical_drift.py  optical_steering_correction_client.py  package.xml
openmv_flow/config/: optical_flow.yaml
openmv_flow/launch/: openmv_flow.launch
openmv_flow/msg/: OpticalDrift.msg  OpticalDriftCorrection.msg
openmv_flow/scripts/: optical_drift.py  optical_steering_correct.py  optical_steering_correction_server.py
openmv_flow/srv/: OpticalSteeringCorrection.srv
ros_ina/: CMakeLists.txt  package.xml
ros_ina/launch/: ros_ina.launch  ros_ina_ns.launch  ros_power_monitor.launch
ros_ina/scripts/: .ina_reader.py.swp  ina_reader.py  ina_reader_dry.py  ros_ina.py  ros_ina2.py  ros_ina_BatteryMsg.py  shore_power_check.sh
tenacity_control/: CMakeLists.txt
tenacity_control/config/: control_ackermann_drive.yaml
tenacity_description/launch/: description.launch
tenacity_description/meshes/: Corner_Sonar_Bracket-Left.stl  OAK-D_Sensor_Stalk-export.stl  OAK-D_Sensor_Stalk_no_camera-export.stl
tenacity_description/urdf/: astra.xacro  back_cover.xacro  front_cover.xacro  mast_mount.xacro  oakd.gazebo  oakd.xacro  oakd_mount.xacro  oakd_multicamera.xacro  tenacity.urdf.xacro  tenacity.urdf.xacro.bak  tenacity_astra.xacro  tenacity_hazcam.xacro  tenacity_imu.xacro  tenacity_imu_sensor.xacro  tenacity_inertials.xacro  tenacity_materials.xacro  tenacity_oakd.xacro  tenacity_oakd_multicamera.xacro  tenacity_sonar.xacro
tenacity_firmware/: CMakeLists.txt  package.xml  sawppy_rover_arduino_debug-ap_mode.ino  sawppy_rover_rosserial_VNH5019_FSi6_control.ino
tenacity_gazebo/: CMakeLists.txt  package.xml
tenacity_gazebo/launch/: tenacity_empty_world.launch  tenacity_mars_world.launch  tenacity_marsyard.launch  tenacity_ramp_world.launch  tenacity_rolling_hills.launch  tenacity_spawn.launch  tenacity_spawn_in_terrain.launch  tenacity_trellis.launch  tenacity_willow_garage.launch
tenacity_gazebo/models/obstacles/: gazebo_ramps.scad
tenacity_gazebo/models/obstacles/meshes/: gazebo_low_walled_ramp.stl  gazebo_ramp.stl  gazebo_walled_ramp.stl
tenacity_gazebo/models/trellis/: model.config  model.sdf
tenacity_gazebo/models/trellis/meshes/: trellis.stl
tenacity_gazebo/models/trellis/urdf/: sensor_stalk.xacro  sweep.urdf
tenacity_gazebo/worlds/: ramp.world  rolling_hills.world  willowgarage.world
tenacity_imaging/: CMakeLists.txt  package.xml
tenacity_imaging/action/: MastCamSnapshot.action  PanoramaScan.action
tenacity_imaging/config/: mastcam_snapshot_params.yaml  panorama_scan_params.yaml
tenacity_imaging/launch/: panorama_scan_server.launch
tenacity_imaging/scripts/: mastcam_snapshot_client.py  mastcam_snapshot_server.py  panorama_scan_client.py  panorama_scan_server.py  site_sweep.py
tenacity_navigation/: CMakeLists.txt  package.xml
tenacity_ros/: basic_sonar_assist.py  grid_distance_drive.py  sonar-trim.py  sonar_steering_controller.py  sonar_twitchy_assist.py  steering_corner_twist.py  steering_trim_controller.py  teleop_corner_twist.py  teleop_mastcam.py  teleop_mastcam_group.py
tenacity_ros/launch/: cameras_remote.launch  oakd_yolo_remote.launch  openmv_remote.launch  tenacity_base.launch  tenacity_base_local.launch  tenacity_base_motorless.launch  tenacity_base_motors.launch  tenacity_base_remote.launch  tenacity_base_remote_astra.launch  tenacity_base_remote_cameras_motorless.launch  tenacity_base_remote_motorless.launch  tenacity_base_remote_oakd.launch  tenacity_base_remote_ttys.launch  tenacity_base_teleop.launch  tenacity_teleop.launch
tenacity_ros/param/: control_ackermann_drive.yaml  range_params.yaml
tenacity_ros/scripts/: 62-tenacity_usb.rules  assisted_wander.py  assisted_wander_gazebo.py  assisted_wander_gazebo.py.bak  battstat.py  dynamixel_publish_exercise.py  incline.py  keepalive.py  lane_wander.py  launch_switch.py  move.py  raspinger.py  roslaunch.service  scored_assisted_wander_gazebo.py  sonar.py  sonar_assist.py  sonar_cornering.py  teleop_corner_twist.py  tenacity_follower.py  yolo_follower.py  yolo_landmark.py  yolo_objects.py
tenacity_steering/: CMakeLists.txt  controller_manager.launch  joints_trajectory_controller.yaml  mastcam.yaml  package.xml  start_meta_controller.launch  start_steering_controller.launch  start_tilt_controller.launch  tilt.yaml
tenacity_steering/launch/: start_meta_controller.launch  start_steering_controller.launch
tenacity_steering/scripts/: steering_trim_controller.py  teleop_corner_twist.py
tenacity_watchdog_manager/: CMakeLists.txt  package.xml
tenacity_watchdog_manager/launch/: watchdog_manager.launch
tenacity_watchdog_manager/msg/: Statboard.msg  Tilt.msg
tenacity_watchdog_manager/scripts/: .battery_watchdog.py.swp  attitude_watchdog.py  battery_watchdog.py  cliff_watchdog.py  obstacle_watchdog.py  scripts.py  watchdog_manager.py
tenacity_watchdog_manager/tenacity_control/: package.xml
tenacity_watchdog_manager/tenacity_control/launch/: control.launch
tenacity_watchdog_manager/tenacity_description/: CMakeLists.txt  package.xml
tenacity_watchdog_manager/tenacity_ros/: CMakeLists.txt  package.xml  sonar_assist.py  teleop_corner_twist.py  teleop_corner_twist.py.bak
(+44 files in other folders)
